--- a/public/static/frontend/css/slick.css
+++ b/public/static/frontend/css/slick.css
@@ -16,6 +16,7 @@
     -ms-touch-action: pan-y;
         touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
+    margin-bottom: 10px;
 }
 
 .slick-list
