--- a/public/static/frontend/css/pushy.css
+++ b/public/static/frontend/css/pushy.css
@@ -26,7 +26,7 @@
 }
 .pushy a:hover {
     color: #FFF;
-    background: #FF0000;
+    background: #e23d3d;
 }
 .pushy ul:first-child {
   margin-top: 0px;
